Bug in VS was preventing the binding of images to css code. Had to restart to fix. Corrected missing background images.

--- a/Insectic/wwwroot/css/_layout.css
+++ b/Insectic/wwwroot/css/_layout.css
@@ -76,7 +76,7 @@ img {
     grid-area: 1/1/3/2;
     display: flex;
     flex-direction: column;
-    background: url();
+    background: url(/img/corkboard.jpg);
 }
 
 .heading {
@@ -185,7 +185,7 @@ img {
 
 
 .note-board {
-    background-image: url(../..)
+    background-image: url(/img/corkboard.jpg);
     grid-area: 2/1/3/3;
     min-height: 100%;
     min-width: 100%;
